fix: App width and overflow

--- a/src/apps/App.css
+++ b/src/apps/App.css
@@ -6,6 +6,7 @@
 :root,
 body,
 #root {
-  width: 100%;
+  width: 100vw;
   margin: auto;
+  overflow-x: hidden;
 }
